Add detailed Javadoc comments in the entire project